# eleven_db

./: .gitignore  BUILD.md  README.md  README_RUST.md  package-lock.json  package.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build-tauri.yml  build-windows.yml  lint.yml
docs/: REQUIREMENTS.md
docs/superpowers/specs/: 2026-07-22-tab-batch-close-design.md
resources/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  connection_manager.rs  crypto.rs  drivers.rs  error.rs  lib.rs  main.rs  preload.ts  stores.rs  types.rs
src-tauri/src/drivers/: mysql_driver.rs  redis_driver.rs
src/lib/: api-tauri.ts  api.ts
src/main/: connection-manager.ts  errors.ts  ipc.ts  main.ts
src/main/drivers/: index.ts  mysql.ts  redis-factory.ts  redis-types.ts  redis.ts  types.ts
src/main/stores/: secrets.ts  store.ts
src/preload/: preload.ts
src/renderer/: global.d.ts  index.html  main.tsx  styles.css
src/renderer/components/: ConnectionEditor.tsx  ConnectionTree.tsx  PaginationIcon.tsx  ResizeHandle.tsx  ResultTable.tsx  ReviewDialog.tsx  RoutineDetailModal.tsx  SchemaIcon.tsx  SchemaTree.tsx  SplashScreen.tsx  SqlEditor.tsx  TableDetailModal.tsx  TableStructureEditor.tsx
src/renderer/lib/: api.ts  csv.ts  layout.ts  redis-tree.ts  scripts.ts  sqlFormat.ts  theme.ts  where-builder.ts
src/renderer/views/: App.tsx  RedisBrowser.tsx  SqlConsole.tsx  TableBrowser.tsx
src/shared/: ipc.ts  types.ts
